alignment catalog by center & fix path for stars & add dinamic width for catalog

--- a/src/styles/_product-card.scss
+++ b/src/styles/_product-card.scss
@@ -86,12 +86,12 @@ p {
     height: 13px;
     width: 15px;
     display: inline-block;
-    background: url("/images/star.svg") no-repeat center;
+    background: url(../images/star.svg) no-repeat center;
   }
 }
 
 @for $i from 0 through 5 {
   .stars--#{$i} > .stars__element:nth-child(-n+#{$i}) {
-    background-image: url("/images/star-active.svg");
+    background-image: url(../images/star-active.svg);
   }
 }
