--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,7 +14,8 @@ body {
 .catalog {
   max-width: 1200px;
   padding: 0 16px;
+  margin: auto;
   display: grid;
   justify-content: center;
-  grid-template-columns: repeat(4, 248px);
+  grid-template-columns: repeat(auto-fit, 248px);
 }
